Bug 1609675 - Enable a `TS_E_NOLAYOUT` hack for MS-IME even if running on Win10 Build 17643 or later r=m_kato

MS-IME should get `TS_E_NOLAYOUT` error correctly when it's running on Win10
Build 17643 or later.  However, according to the bug report, MS-IME itself
does not handle it correctly.  Therefore, we need to enable a hack for MS-IME
for Japanese even when
`intl.tsf.hack.allow_to_stop_hacking_on_build_17643_or_later` is true.

Differential Revision: https://phabricator.services.mozilla.com/D63045